# gira_pierde

./: .env  README.md  main.py  pyproject.toml  requeriments.txt
.demo/: presentacion.json
app/: const.py  main.py
app/controller/: challenge.py
app/db/: challenges_queries.py
app/routers/:  challenge.py  challenge.py  pages.py  view.py
app/templates/: index.html  index.jinja  page_v2.html  page_v3.html  page_v4.html  page_v5.html
app/templates/components/: badge.jinja  btn.jinja  navTabs.jinja  sectionCreateChallenge.jinja  sectionGetAleatorio.jinja  sectionModifiedChallenge.jinja
interactive_file/: data.json  lib.py  main.py
pierde_muere/: bruno.json  create_challenge.bru  get_aleatory_challenge.bru  get_all_challenge.bru
